added contributing page (Still WIP)
also updated index.html
loading.html
contribute.html
styles.css
and probably some more stuff not written here lol

--- a/contribute.css
+++ b/contribute.css
@@ -10,6 +10,12 @@ html {
     margin-top: auto;
     margin-bottom: auto;
 }
+.contribute {
+    font-size: 60px;
+}
+.links__below {
+    font-size: 50px;
+}
 #end__of__page {
     position: relative;
     bottom: -100px;
