--- a/styles.css
+++ b/styles.css
@@ -80,3 +80,9 @@ html {
         width: 14vw;
     }
 }
+.link_to_contributing_page {
+    width:100%;
+    display: flex;
+    justify-content: center;
+    top: -70px;
+}
