some more changes
:)

--- a/contribute.css
+++ b/contribute.css
@@ -84,5 +84,7 @@ html {
         margin-left: 2vw;
         margin-right: 2vw;
         width: 14vw;
+        position: relative;
+        top: 20px;
     }
 }
