--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,10 @@ html {
     display: flex;
     justify-content: center;
 }
+#flip-btn {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    padding: 10px 20px;
+    
+  }
